force-app/main/default/objects/Contact/fields/Ammount1__c.field-meta.xml
<CustomField>
    <fullName>Ammount1__c</fullName>
    <label>Ammount1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>