force-app/main/default/objects/Contact/fields/Ammount2__c.field-meta.xml
<CustomField>
    <fullName>Ammount2__c</fullName>
    <label>Ammount2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>