force-app/main/default/objects/Contact/validationRules/leadSource_Error.validationRule-meta.xml
<ValidationRule>
    <fullName>leadSource_Error</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Level__c , &apos;Primary&apos;) , ISPICKVAL( LeadSource , &apos;Web&apos;) )</errorConditionFormula>
    <errorMessage>IF Level is &quot;Primary&quot; then LeadSource Can not be &quot;Web&quot;</errorMessage>
</ValidationRule>