force-app/main/default/objects/Contact/validationRules/Validation_email_prevenet.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_email_prevenet</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Email )</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Validation email blank prevent</errorMessage>
</ValidationRule>